classDiagram
    class HighScore {
        +string PlayerInitials
        +int Score
        +DateTimeOffset Timestamp
    }
    
    class IHighScoreRepository {
        <<interface>>
        +GetTopScoresAsync()
        +SaveHighScoreAsync()
    }
    
    class HighScoreService {
        +GetTopScoresAsync()
        +SaveHighScoreAsync()
    }
    
    IHighScoreRepository <|.. HighScoreService
    HighScoreService --> HighScore
